[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyemath_models"
version = "0.3.0"
description = "Sqlalchemy declarative models and pydantic shemas for EyeMath project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["eyemath_schemas*", "eyemath_models*"]

[project.urls]
"Homepage" = "https://github.com/dagahan/eyemath_models"
"Bug Tracker" = "https://github.com/dagahan/eyemath_models/issues"